index.css
/* ... */
.contact-form .fg{
  display: none;
  opacity: 1;
  position: absolute;
  width: 450px;
  height: 500px;
  top: 0;
  left: 0;
  transform: translateX(-25px) translateY(-25px);
  z-index: 1500;
}

.contact-form .fg1{
  display: none;
  opacity: 0;
  position: absolute;
  content: "";
  left: -200px;
  top: 0;
  transform: translateX(175px) translateY(-370px);
  border-style: solid;
  border-width: 0 225px 350px 225px;
  border-color: transparent transparent rgb(102, 102, 102) transparent;
  z-index: 1500;
  animation: fg-mail-close 1s forwards 1.5s;
}

.fg2{
  left: -200px;
  top: 0;
}
.sticker{
  display: none;
  opacity: 0;
  position: absolute;
  top: 250px;
  left: 175px;
  width: 50px;
  height: 50px;
  z-index: 1500;
  border: 1px solid black;
  border-radius: 50%;
  transform: scale(10);
  animation: stickOn 1s 2.7s forwards;
}

@keyframes stickOn{
  100%{
    opacity: 1;
    transform: scale(2);
  }
}

.sticker img{
  width: 100%;
  height: 100%;
  border-radius: 50%;
}

@keyframes bg-mail{
  100%{
    opacity: 1;
  }
}
@keyframes fg-mail{
  100%{
    opacity: 1;
    border-style: solid;
    border-width: 180px 225px;
    border-color: transparent rgb(118, 118, 118) rgb(146, 146, 146);
  }
}
@keyframes fg-mail-close{
  100%{
    opacity: 1;
    transform: translateX(175px) translateY(-27px);
    border-width: 350px 225px 0 225px;
    border-color: rgb(102, 102, 102) transparent transparent transparent;
    z-index: 1500;
  }
}

@keyframes shrink{
  0%{
    transform: translateX(0) scale(1);
  }
  100%{
    transform: translateX(0) scale(0.7);
    box-shadow: 0px 40px 80px 0 rgba(41, 48, 135, 0.37);
  }
}

@keyframes evenSmaller{
  0%{
    transform: translateX(0) scale(0.3);
  }
  100%{
    transform: translateX(0px) scale(0.1);
  }
}
@keyframes sendOutEmail{
  from { transform: rotate(0deg) translateX(0px) rotate(0deg) scale(0.7); }
    to   {
       transform: rotate(-180deg) translateX(500px) rotate(100deg) scale(0); 
       opacity: 0;
      }
}

@keyframes stayPut{
  75%{
    opacity: 1;
    transform: translateX(-1.5%);
  }
  85%{
    transform: translateX(1.5%);
  }
  100%{
    pointer-events: auto;
    background: transparent;
    transform: translateX(0);
  }
}
.contact-form form{
  background: transparent;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  padding: 1rem 2.2rem;
  overflow: hidden;
  position: relative;
  font-weight: 700;
  margin: auto;
}



.flex{
  display: flex;
  justify-content: flex-start;
}


.contact-form .input{
    width: 100%;
    outline: none;
    background: black;
    border: 2px solid #fafafa;
    padding: 0.6rem 1.2rem;
    color: #fff;
    font-weight: 500;
    font-size: 0.95rem;
    letter-spacing: 0.5px;
    border-radius: 25px;
    transition: 0.3s;
}

.contact-form textarea.input{
    padding: 0.8rem 1.2rem;
    min-height: 150px;
    border-radius: 22px;
    resize: none;
    overflow-y: none;
}

.input-container label {
    position: absolute;
    top: 22%;
    left: 10px;
    transform: translateY(-20%);
    padding: 0 0.4rem;
    color: #fafafa;
    font-size: 0.9rem;
    font-weight: 400;
    pointer-events: none;
    transition: 0.5s;
}
.input-container:nth-of-type(3) label{
    transform: translateY(-120%);
}

.form-title {
    color: white;
    font-weight: 500;
    line-height: 1;
    margin: 10px 0 20px 0;
}

.input-container {
    width: 100%;
    position: relative;
    margin: 1rem 0;
}

.input-container .btn {
    padding: 0.6rem 1.3rem;
    background-color: transparent;
    border: 2px solid #fafafafa;
    font-size: 0.95rem;
    color: #fff;
    line-height: 1;
    border-radius: 25px;
    outline: none;
    cursor: pointer;
    margin: 0;
    width: 100%;
}
.input-container .btn:hover {
    background: white;
    color: black;
    font-weight: 700;
}

.input-container span {
    position: absolute;
    top: 0;
    left: 25px;
    transform: translateY(-50%);
    font-size: 0.8rem;
    padding: 0 0.4rem;
    color: transparent;
    pointer-events: none;
}

.input-container span::before,
.input-container span::after {
    content: "";
    position: absolute;
    width: 10%;
    opacity: 0;
    height: 5px;
    background: black;
    top: 50%;
    transform: translateY(-50%);
    z-index: 1000;
}

.input-container span::before {
    left: 50%;
}

.input-container span::after {
    right: 50%;
}
.input-container.focus label {
    top: 0;
    transform: translateY(-50%);
    left: 25px;
    font-size: 0.8rem;
    z-index: 1500;
}

@keyframes openGap{
  100%{
    width: 50%;
    opacity: 1;
  }
}

.input-container.focus span::before,
.input-container.focus span::after {
    opacity: 1;
    animation: openGap 0.2s forwards;
}

/* Change autocomplete styles in WebKit */
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  -webkit-text-fill-color: white;
  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
  box-shadow: 0 0 0px 1000px #000 inset;
  transition: background-color 5000s ease-in-out 0s;
}

@keyframes connectToContactForm{
  0%{
    opacity: 1;
    width: 0%;
  }
  
  100%{
    opacity: 1;
    width: 100%;
  }
}



.instructions{
  position: absolute;
  display: flex;
  justify-content: center;
  top: 90%;
  width: 70%;
  max-width: 400px;
  height: 30px;
  color: white;
  background: transparent;
}

.next:hover{
  cursor: pointer;
  transform: scale(1.1);
}
.instructions .animate{
  animation: shimmer 1.2s linear infinite alternate;
}
.instructions .next{
  display: none;
  width: max-content;
  height: 100%;
  text-align: center;
  position: absolute;
}
.instructions2{
  display: none;
}
.instructions3{
  display: none;
}
.instructions4{
  display: none;
}
.projectsMenu1{
  display: none;
  left: 5%;
}
.projectsMenu2{
  display: none;
  left: 5%;
}
.projectsMenu3{
  display: none;
  left: 5%;
}
/* ... */

